package(default_visibility = ["//visibility:public"])

# Base tmux configuration
genrule(
    name = "tmux_conf",
    srcs = ["tmux.conf.template"],
    outs = ["tmux.conf"],
    cmd = "cp $(location tmux.conf.template) $@",
)

# Default tmux configuration
filegroup(
    name = "tmux",
    srcs = [
        ":tmux_conf",
    ],
)

# Work variant tmux configuration
genrule(
    name = "work_tmux_conf",
    srcs = ["tmux.conf.template"],
    outs = ["work_tmux.conf"],
    cmd = """
        cat $(location tmux.conf.template) > $@
        sed -i.bak 's/%%VARIANT%%/work/g' $@
        rm -f $@.bak
    """,
)

filegroup(
    name = "work_tmux",
    srcs = [
        ":work_tmux_conf",
    ],
)

# Personal variant tmux configuration
genrule(
    name = "personal_tmux_conf",
    srcs = ["tmux.conf.template"],
    outs = ["personal_tmux.conf"],
    cmd = """
        cat $(location tmux.conf.template) > $@
        sed -i.bak 's/%%VARIANT%%/personal/g' $@
        rm -f $@.bak
    """,
)

filegroup(
    name = "personal_tmux",
    srcs = [
        ":personal_tmux_conf",
    ],
)

# Combined tmux configuration with platform selectors
filegroup(
    name = "combined_tmux",
    srcs = [
        "//tools/tmux:tmux_conf_combined",
    ],
)

# Unified tmux configuration with platform and version variants
filegroup(
    name = "unified_tmux",
    srcs = [
        "//tools/tmux:tmux_conf_unified",
    ],
)

# Print path to the generated tmux.conf file
genrule(
    name = "print_path",
    srcs = [":tmux_conf"],
    outs = ["tmux_path.txt"],
    cmd = "echo 'To use this tmux configuration, run:' > $@ && " +
          "echo '' >> $@ && " +
          "echo 'bazel run //tools/tmux:tmux_conf_dotfile' >> $@ && " +
          "echo '' >> $@ && " +
          "echo 'This will create a ~/.tmux.conf file that sources the generated configuration.' >> $@ && " +
          "echo 'Any local customizations can be added to ~/.tmux.conf after the source line.' >> $@",
)

# Print path to the combined tmux configuration
genrule(
    name = "print_combined_path",
    srcs = ["//tools/tmux:tmux_conf_combined"],
    outs = ["tmux_combined_path.txt"],
    cmd = "echo 'To use the combined tmux configuration, run:' > $@ && " +
          "echo '' >> $@ && " +
          "echo 'bazel run //tools/tmux:tmux_conf_combined_dotfile' >> $@ && " +
          "echo '' >> $@ && " +
          "echo 'This will create a ~/.tmux.conf.combined file that sources the generated configuration.' >> $@ && " +
          "echo 'Any local customizations can be added to ~/.tmux.conf.combined after the source line.' >> $@",
)

# Print path to the unified tmux configuration
genrule(
    name = "print_unified_path",
    srcs = ["//tools/tmux:tmux_conf_unified"],
    outs = ["tmux_unified_path.txt"],
    cmd = "echo 'To use the unified tmux configuration, run:' > $@ && " +
          "echo '' >> $@ && " +
          "echo 'bazel run //tools/tmux:tmux_conf_unified_dotfile' >> $@ && " +
          "echo '' >> $@ && " +
          "echo 'This will create a ~/.tmux.conf.unified file that sources the generated configuration.' >> $@ && " +
          "echo 'Any local customizations can be added to ~/.tmux.conf.unified after the source line.' >> $@",
)