# Tmux configuration module - provides rules and configs
# This module should contain reusable building blocks

package(default_visibility = ["//visibility:public"])

# Export all configuration files
filegroup(
    name = "config_files",
    srcs = glob(["configs/*.tmux"]),
)

# Individual configuration section genrules
genrule(
    name = "tmux_header",
    srcs = ["configs/00_header.tmux"],
    outs = ["sections/00_header.tmux"],
    cmd = "cp $(location configs/00_header.tmux) $@",
)

genrule(
    name = "tmux_server_options",
    srcs = ["configs/01_server_options.tmux"],
    outs = ["sections/01_server_options.tmux"],
    cmd = "cp $(location configs/01_server_options.tmux) $@",
)

genrule(
    name = "tmux_terminal_settings",
    srcs = ["configs/02_terminal_settings.tmux"],
    outs = ["sections/02_terminal_settings.tmux"],
    cmd = "cp $(location configs/02_terminal_settings.tmux) $@",
)

genrule(
    name = "tmux_history_management",
    srcs = ["configs/03_history_management.tmux"],
    outs = ["sections/03_history_management.tmux"],
    cmd = "cp $(location configs/03_history_management.tmux) $@",
)

genrule(
    name = "tmux_user_interface",
    srcs = ["configs/04_user_interface.tmux"],
    outs = ["sections/04_user_interface.tmux"],
    cmd = "cp $(location configs/04_user_interface.tmux) $@",
)

genrule(
    name = "tmux_window_pane_options",
    srcs = ["configs/05_window_pane_options.tmux"],
    outs = ["sections/05_window_pane_options.tmux"],
    cmd = "cp $(location configs/05_window_pane_options.tmux) $@",
)

genrule(
    name = "tmux_status_line",
    srcs = ["configs/06_status_line.tmux"],
    outs = ["sections/06_status_line.tmux"],
    cmd = "cp $(location configs/06_status_line.tmux) $@",
)

genrule(
    name = "tmux_status_bar_styling",
    srcs = ["configs/07_status_bar_styling.tmux"],
    outs = ["sections/07_status_bar_styling.tmux"],
    cmd = "cp $(location configs/07_status_bar_styling.tmux) $@",
)

genrule(
    name = "tmux_window_title_settings",
    srcs = ["configs/08_window_title_settings.tmux"],
    outs = ["sections/08_window_title_settings.tmux"],
    cmd = "cp $(location configs/08_window_title_settings.tmux) $@",
)

genrule(
    name = "tmux_mouse_support",
    srcs = ["configs/09_mouse_support.tmux"],
    outs = ["sections/09_mouse_support.tmux"],
    cmd = "cp $(location configs/09_mouse_support.tmux) $@",
)

genrule(
    name = "tmux_key_bindings",
    srcs = ["configs/10_key_bindings.tmux"],
    outs = ["sections/10_key_bindings.tmux"],
    cmd = "cp $(location configs/10_key_bindings.tmux) $@",
)

genrule(
    name = "tmux_copy_mode",
    srcs = ["configs/11_copy_mode.tmux"],
    outs = ["sections/11_copy_mode.tmux"],
    cmd = "cp $(location configs/11_copy_mode.tmux) $@",
)

genrule(
    name = "tmux_enhanced_functionality",
    srcs = ["configs/12_enhanced_functionality.tmux"],
    outs = ["sections/12_enhanced_functionality.tmux"],
    cmd = "cp $(location configs/12_enhanced_functionality.tmux) $@",
)

genrule(
    name = "tmux_session_management",
    srcs = ["configs/13_session_management.tmux"],
    outs = ["sections/13_session_management.tmux"],
    cmd = "cp $(location configs/13_session_management.tmux) $@",
)

genrule(
    name = "tmux_advanced_features",
    srcs = ["configs/14_advanced_features.tmux"],
    outs = ["sections/14_advanced_features.tmux"],
    cmd = "cp $(location configs/14_advanced_features.tmux) $@",
)

genrule(
    name = "tmux_local_extensions",
    srcs = ["configs/15_local_extensions.tmux"],
    outs = ["sections/15_local_extensions.tmux"],
    cmd = "cp $(location configs/15_local_extensions.tmux) $@",
)

# Base tmux configuration that combines all sections
genrule(
    name = "base_tmux_conf",
    srcs = [
        ":tmux_header",
        ":tmux_server_options",
        ":tmux_terminal_settings",
        ":tmux_history_management",
        ":tmux_user_interface",
        ":tmux_window_pane_options",
        ":tmux_status_line",
        ":tmux_status_bar_styling",
        ":tmux_window_title_settings",
        ":tmux_mouse_support",
        ":tmux_key_bindings",
        ":tmux_copy_mode",
        ":tmux_enhanced_functionality",
        ":tmux_session_management",
        ":tmux_advanced_features",
        ":tmux_local_extensions",
    ],
    outs = ["base_tmux.conf"],
    cmd = """
        echo "# THIS FILE IS GENERATED BY BAZEL - DO NOT EDIT DIRECTLY" > $@
        echo "# Generated base tmux configuration" >> $@
        echo "" >> $@
        
        for section in $(SRCS); do
            echo "# Including $$(basename $$section)" >> $@
            cat $$section >> $@
            echo "" >> $@
        done
        
        echo "# End of generated configuration" >> $@
        echo "# Generated at $$(date)" >> $@
    """,
)

# Export the base configuration for use by tools/tmux
filegroup(
    name = "base_config",
    srcs = [":base_tmux_conf"],
)

# Create a simple tmux configuration without variants
genrule(
    name = "tmux_conf",
    srcs = [":base_tmux_conf"],
    outs = ["tmux.conf"],
    cmd = """
        echo "# THIS FILE IS GENERATED BY BAZEL - DO NOT EDIT DIRECTLY" > $@
        echo "# Core tmux configuration" >> $@
        echo "" >> $@
        
        cat $(location :base_tmux_conf) >> $@
        
        echo "# End of generated configuration" >> $@
        echo "# Generated at $$(date)" >> $@
    """,
)

# Default tmux configuration
filegroup(
    name = "tmux",
    srcs = [":tmux_conf"],
)

# Create a compatibility alias for the combined/unified config
filegroup(
    name = "combined_tmux",
    srcs = [":tmux_conf"],
)

filegroup(
    name = "unified_tmux",
    srcs = [":tmux_conf"],
)