package(default_visibility = ["//visibility:public"])

load("//modules/toolchains:tool_tester.bzl", "tool_tester")

filegroup(
    name = "all_files",
    srcs = glob(["**"]),
)

# Example tool tester
tool_tester(
    name = "test_tools",
)

# Print paths helper target using Bazel native approach
genrule(
    name = "print_paths",
    outs = ["print_paths.info"],
    cmd = """
echo "Toolchain paths:" > $@
echo "-----------------" >> $@
if command -v vim &> /dev/null; then
    echo "vim: $$(which vim)" >> $@
else
    echo "vim: not found" >> $@
fi

if command -v nvim &> /dev/null; then
    echo "neovim: $$(which nvim)" >> $@
else
    echo "neovim: not found" >> $@
fi

if command -v brew &> /dev/null; then
    echo "brew: $$(which brew)" >> $@
else
    echo "brew: not found" >> $@
fi
    """,
)