load("//tools:defs.bzl", "template_file")

package(default_visibility = ["//visibility:public"])

# Base vim configuration
template_file(
    name = "vimrc_conf",
    src = "vimrc.template",
    out = "vimrc",
)

# Default vim configuration
filegroup(
    name = "vim",
    srcs = [
        ":vimrc_conf",
        "//tools/vim:vim_conf_generated",
    ],
)

# Work variant vim configuration
template_file(
    name = "work_vimrc_conf",
    src = "vimrc.template",
    out = "work_vimrc",
    substitutions = {
        "%%VARIANT%%": "work",
    },
)

filegroup(
    name = "work_vim",
    srcs = [
        ":work_vimrc_conf",
        "//tools/vim:vim_conf_generated",
    ],
)

# Personal variant vim configuration
template_file(
    name = "personal_vimrc_conf",
    src = "vimrc.template",
    out = "personal_vimrc",
    substitutions = {
        "%%VARIANT%%": "personal",
    },
)

filegroup(
    name = "personal_vim",
    srcs = [
        ":personal_vimrc_conf",
        "//tools/vim:vim_conf_generated",
    ],
)

# Combined vim configuration with platform selectors
filegroup(
    name = "combined_vim",
    srcs = [
        "//tools/vim:vim_conf_combined",
    ],
    tags = ["vim"],
)

# Unified vim configuration with platform variants
filegroup(
    name = "unified_vim",
    srcs = [
        "//tools/vim:vim_conf_unified",
    ],
)

# Print path to the generated vimrc file
genrule(
    name = "print_path",
    srcs = [":vimrc_conf"],
    outs = ["vim_path.txt"],
    cmd = "echo 'To use this vim configuration, add the following line to your ~/.vimrc:' > $@ && " +
          "echo '' >> $@ && " +
          "echo 'source '$(location :vimrc_conf) >> $@ && " +
          "echo '' >> $@ && " +
          "echo 'Or run this command:' >> $@ && " +
          "echo 'echo \"source '$(location :vimrc_conf)'\" >> ~/.vimrc' >> $@",
)

# Print path to the combined vim configuration
genrule(
    name = "print_combined_path",
    srcs = ["//tools/vim:vim_conf_combined"],
    outs = ["vim_combined_path.txt"],
    cmd = "echo 'To use the combined vim configuration, add the following line to your ~/.vimrc:' > $@ && " +
          "echo '' >> $@ && " +
          "echo 'source '$(location //tools/vim:vim_conf_combined) >> $@ && " +
          "echo '' >> $@ && " +
          "echo 'Or run this command:' >> $@ && " +
          "echo 'echo \"source '$(location //tools/vim:vim_conf_combined)'\" >> ~/.vimrc' >> $@",
)

# Print path to the unified vim configuration
genrule(
    name = "print_unified_path",
    srcs = ["//tools/vim:vim_conf_unified"],
    outs = ["vim_unified_path.txt"],
    cmd = "echo 'To use the unified vim configuration, add the following line to your ~/.vimrc:' > $@ && " +
          "echo '' >> $@ && " +
          "echo 'source '$(location //tools/vim:vim_conf_unified) >> $@ && " +
          "echo '' >> $@ && " +
          "echo 'Or run this command:' >> $@ && " +
          "echo 'echo \"source '$(location //tools/vim:vim_conf_unified)'\" >> ~/.vimrc' >> $@",
)