load("//tools:defs.bzl", "template_file")

package(default_visibility = ["//visibility:public"])

# Export the VSCode rules
exports_files([
    "vscode_rules.bzl",
])

# Base VSCode configuration
template_file(
    name = "vscode_settings_conf",
    src = "settings.json.template",
    out = "settings.json",
)

# Default VSCode configuration
filegroup(
    name = "vscode",
    srcs = [
        ":vscode_settings_conf",
        "//tools/vscode:vscode_conf_generated",
    ],
)

# Work variant VSCode configuration
template_file(
    name = "work_vscode_conf",
    src = "settings.json.template",
    out = "work_settings.json",
    substitutions = {
        "%%VARIANT%%": "work",
    },
)

filegroup(
    name = "work_vscode",
    srcs = [
        ":work_vscode_conf",
        "//tools/vscode:vscode_conf_generated",
    ],
)

# Personal variant VSCode configuration
template_file(
    name = "personal_vscode_conf",
    src = "settings.json.template",
    out = "personal_settings.json",
    substitutions = {
        "%%VARIANT%%": "personal",
    },
)

filegroup(
    name = "personal_vscode",
    srcs = [
        ":personal_vscode_conf",
        "//tools/vscode:vscode_conf_generated",
    ],
)

# Print path to the generated settings.json file
genrule(
    name = "print_path",
    srcs = [":vscode_settings_conf"],
    outs = ["vscode_path.txt"],
    cmd = "echo 'To use this VSCode configuration, copy the file to your VSCode settings location:' > $@ && " +
          "echo '' >> $@ && " +
          "echo 'cp '$(location :vscode_settings_conf)' \"$$HOME/.vscode/settings.json\"' >> $@ && " +
          "echo '' >> $@",
)